[gd_scene load_steps=4 format=2]

[ext_resource path="res://shapes_board/shape.gd" type="Script" id=1]
[ext_resource path="res://blocks.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 30, 30 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, 30 )
texture = SubResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 0, 60 )
texture = SubResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 0, 90 )
texture = SubResource( 1 )
